// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
<button>
  Text
</button>
`;

exports[`Button Renders airbnb primary 1`] = `
<ContextProvider
  value={
    Object {
      "button": Object {
        "primary": "
  background-color: #008489;
  height: 44px;
  width: 183px;
  border-radius: 8px;
  border: 1px solid #008489;
  color: #ffffff;
  font-family: Montserrat;
  font-size: 12px;
  font-weight: 700;
  cursor: pointer;
  ",
        "secondary": "
  background-color: #ffffff;
  height: 44px;
  width: 183px;
  border-radius: 8px;
  border: 1px solid #008489;
  color: #008489;
  font-family: Montserrat;
  font-size: 12px;
  font-weight: 700;
  cursor: pointer;
  ",
      },
    }
  }
>
  <Button
    type="primary"
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Button Renders figma primary 1`] = `
<ContextProvider
  value={
    Object {
      "button": Object {
        "primary": "
  background-color: #000000;
  height: 42px;
  width: 302px;
  border-radius: 8px;
  border: 3px solid #000000;
  color: #ffffff;
  font-family: Lato;
  font-size: 16px;
  font-weight: 700;
  text-transform: none;
  cursor: pointer;
  &:hover {
    transform: translateY(-2px);
  }
  &:active {
    transform: translateY(1px);
  }
  transition: transform 200ms,background 200ms;
  ",
        "secondary": "
  background-color: #ffffff;
  height: 42px;
  width: 302px;
  border-radius: 8px;
  border: 3px solid #000000;
  color: #000000;
  font-family: Lato;
  font-size: 16px;
  font-weight: 700;
  text-transform: none;
  cursor: pointer;
  &:hover {
    transform: translateY(-2px);
  }
  &:active {
    transform: translateY(1px);
  }
  transition: transform 200ms,background 200ms;
  ",
      },
    }
  }
>
  <Button
    type="primary"
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Button Renders primary 1`] = `
<styled.button>
  Text
</styled.button>
`;

exports[`Button Renders secondary 1`] = `
<styled.button>
  Text
</styled.button>
`;

exports[`Button Renders spotify primary 1`] = `
<ContextProvider
  value={
    Object {
      "button": Object {
        "primary": "
  background-color: #1db954;
  height: 48px;
  width: 214px;
  border-radius: 500px;
  border: none;
  color: #ffffff;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 700;
  text-transform: uppercase;
  cursor: pointer;
  &:hover {
    transform: scale(1.04);
    background-color: #1ed760;
  }
  &:active {
    transform: scale(1);
    background-color: #14833b;
  }
  transition: all 33ms;
  ",
        "secondary": "
  background-color: transparent;
  height: 48px;
  width: 214px;
  border-radius: 500px;
  border: 2px solid #000000;
  color: #000000;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 700;
  text-transform: uppercase;
  cursor: pointer;
  &:hover {
    transform: scale(1.04);
  }
  &:active {
    transform: scale(1);
  }
  transition: all 33ms;
  ",
      },
    }
  }
>
  <Button
    type="primary"
  >
    Text
  </Button>
</ContextProvider>
`;

exports[`Button Renders spotify secondary 1`] = `
<ContextProvider
  value={
    Object {
      "button": Object {
        "primary": "
  background-color: #1db954;
  height: 48px;
  width: 214px;
  border-radius: 500px;
  border: none;
  color: #ffffff;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 700;
  text-transform: uppercase;
  cursor: pointer;
  &:hover {
    transform: scale(1.04);
    background-color: #1ed760;
  }
  &:active {
    transform: scale(1);
    background-color: #14833b;
  }
  transition: all 33ms;
  ",
        "secondary": "
  background-color: transparent;
  height: 48px;
  width: 214px;
  border-radius: 500px;
  border: 2px solid #000000;
  color: #000000;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 700;
  text-transform: uppercase;
  cursor: pointer;
  &:hover {
    transform: scale(1.04);
  }
  &:active {
    transform: scale(1);
  }
  transition: all 33ms;
  ",
      },
    }
  }
>
  <Button
    type="secondary"
  >
    Text
  </Button>
</ContextProvider>
`;
